--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Fancy Pants 2 Unblocked - ubg235 GameFlare</title>
+  <title>The Fancy Pants Adventure World 2 Unblocked - ubg235 GameFlare</title>
   <style>
     body {
     margin: 0px;
