--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>The Fancy Pants Adventure World 2 Unblocked - ubg235 GameFlare</title>
+  <title>Fancy Pants 3 Unblocked - ubg235 GameFlare</title>
   <style>
     body {
     margin: 0px;
@@ -11,7 +11,7 @@
     overflow: hidden;
   }
   </style>
-  <meta name="description" content="Fancy Pants 2, Fancy Pants 2 Unblocked">
+  <meta name="description" content="Fancy Pants 3, Fancy Pants 3 Unblocked">
   <meta property="og:image" content="ruffle_512x512.png" />
 </head>
 
@@ -35,7 +35,7 @@
 
       <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="900" height="600" id="gamefile" align="middle">
       <param name="allowScriptAccess" value="always" />
-      <param name="movie" value="zRTGTtOioz4D59.swf" />
+      <param name="movie" value="gbZ42fRfVdGMvQ.swf" />
       <param name="quality" value="high" />
       <param name="wmode" value="window" />
       <param name="allowfullscreen" value="false" />
@@ -48,7 +48,7 @@
       <param name="flashvars" value="gameID=13824" />
       <param name="hasPriority" value="true" />
 
-      <embed src="zRTGTtOioz4D59.swf" width="100%" height="100%" id="gamefileEmbed" name="gamefile" align="middle" wmode="window" allowfullscreen="false" allowfullscreeninteractive="false" fullScreenAspectRatio="" quality="high" play="true" loop="true" menu="" allowScriptAccess="always" flashvars="gameID=13824" hasPriority="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer"></embed>
+      <embed src="gbZ42fRfVdGMvQ.swf" width="100%" height="100%" id="gamefileEmbed" name="gamefile" align="middle" wmode="window" allowfullscreen="false" allowfullscreeninteractive="false" fullScreenAspectRatio="" quality="high" play="true" loop="true" menu="" allowScriptAccess="always" flashvars="gameID=13824" hasPriority="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer"></embed>
       </object>
 
     </div>
